@@ -1,4 +1,5 @@
 HEAD
+	+ Make source event not i18n
 	+ Safer way to get the PPPoE 'tty' ethernet interface
 	+ Added PPPoE logging in /var/log/ebox/pppoe.log and ebox.log
 	+ Installation does not fail if the restart of EventDaemon fails
