@@ -1,4 +1,5 @@
 HEAD
+	+ Make source in events non i18n
 	+ After restore, set all the restored modules as changed
 	+ Added module pre-checks for configuration backup
 2.0.13
